<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.knirirr.beecount.CountingActivity" >
    <item android:id="@+id/menuEditProject"
          android:title="@string/editProjTitle"
          android:icon="@android:drawable/ic_menu_edit"
          app:showAsAction="ifRoom"/>
    <item android:id="@+id/menuSaveExit"
          android:title="@string/saveCountsButton"
          android:icon="@android:drawable/ic_menu_save"
          app:showAsAction="ifRoom"/>
    <item android:id="@+id/menuCalculate"
          android:title="@string/calcButton"
          android:icon="@android:drawable/ic_dialog_dialer"
          app:showAsAction="never"/>
    <item android:id="@+id/menuClone"
          android:title="@string/cloneButton"
          android:icon="@android:drawable/ic_dialog_dialer"
          app:showAsAction="never"/>
    <item android:id="@+id/menuLog"
      android:title="@string/countLogButton"
      android:icon="@android:drawable/ic_dialog_dialer"
      app:showAsAction="never"/>
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:orderInCategory="100"
          app:showAsAction="never" />
    <item android:id="@+id/action_share"
          android:title="@string/action_share"
          android:orderInCategory="200"
          android:icon="@android:drawable/ic_menu_share"
          app:showAsAction="ifRoom" />
</menu>
