<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  android:fitsSystemWindows="true"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical"
  android:id="@+id/newprojScreen"
  xmlns:android="http://schemas.android.com/apk/res/android">

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:textSize="20sp"
      android:padding="5sp"
      android:background="@drawable/rounded_corner"
      android:layout_margin="10sp"
      android:id="@+id/newProjectInstructions"
      android:textColor="@android:color/white"
      android:text="@string/newProjectInstructions" />


  <EditText
    android:id="@+id/newprojName"
    android:inputType="text"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text=""
    android:background="@drawable/rounded_corner"
    android:textSize="24sp"
    android:padding="5dp"
    android:layout_margin="5dp">
  </EditText>

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal"
    android:shrinkColumns="*"
    android:stretchColumns="*">
      <Button
       android:id="@+id/addNewCountButton"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:onClick="newCount"
       android:text="@string/labelNewCountButton"
       android:layout_weight="1"
       android:layout_marginRight="5dp"
       android:layout_marginLeft="5dp"
       android:maxLines="1">
      </Button>
      <Button
       android:id="@+id/clearCountButton"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:onClick="clearCount"
       android:text="@string/clearCountButton"
       android:layout_weight="1"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
       android:maxLines="1">
      </Button>
      <Button
       android:id="@+id/newprojSaveButton"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:onClick="saveProject"
       android:text="@string/labelNewprojSaveButton"
       android:layout_weight="1"
       android:layout_marginLeft="5dp"
       android:layout_marginRight="5dp"
       android:maxLines="1">
      </Button>
  </LinearLayout>

  <ScrollView
    android:id="@+id/newCountList"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"> 
    <LinearLayout
      android:id="@+id/newCountLayout"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">
<!-- insert the new counts as they are created in here -->
    </LinearLayout>
  </ScrollView>

</LinearLayout>

