<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/calcScreen">

    <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/calc_area">
        </LinearLayout>

        <!-- area for results -->
        <LinearLayout
                  android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="5dp"
                  android:layout_marginTop="5dp"
                  android:layout_marginRight="5dp"
                  android:paddingLeft="5dp"
                  android:paddingRight="5dp"
                  android:paddingBottom="5dp"
                  android:background="@drawable/rounded_corner">

            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:hint="@string/calcTitle"
                    android:id="@+id/calcResults"
                    android:paddingLeft="5dp"
                    android:paddingTop="5dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="5dp"
                    android:gravity="left|top"/>

        </LinearLayout>


        <!-- buttons -->
        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:shrinkColumns="*"
                android:stretchColumns="*">
              <Button
                    android:id="@+id/performCalculation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:onClick="performCalculation"
                    android:layout_weight="1"
                    android:text="@string/calcButton"
                    android:maxLines="1">
            </Button>
            <Button
                    android:id="@+id/clearCountButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:onClick="saveAndExit"
                    android:layout_weight="1"
                    android:text="@string/saveCountsButton"
                    android:maxLines="1">
            </Button>

        </LinearLayout>

        <!-- area for explanation -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/calcIntroText"
                android:textColor="@android:color/white"
                android:autoLink="email|web"
                android:text="@string/aboutCalc"
                android:background="@drawable/rounded_corner"
                android:textSize="12sp"
                android:padding="10dp"
                android:layout_margin="5dp"/>

    </LinearLayout>
</ScrollView>